Update map api and add path mapping to custom domain
